apps/general/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: general
  labels:
    app.kubernetes.io/name: general
    app.kubernetes.io/instance: general-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: internal
