apps/general/heimdall-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall
  labels:
    app.kubernetes.io/name: heimdall
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: heimdall
  template:
    metadata:
      labels:
        app.kubernetes.io/name: heimdall
    spec:
      containers:
        - name: heimdall
          image: lscr.io/linuxserver/heimdall:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: heimdall-config
