apps/general/homebox-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebox
  labels:
    app.kubernetes.io/name: homebox
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: homebox
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homebox
    spec:
      containers:
        - name: homebox
          image: ghcr.io/sysadminsmedia/homebox:0.23.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7745
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: homebox-data
