apps/general/gitea-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea-postgres
  labels:
    app.kubernetes.io/name: gitea-postgres
    app.kubernetes.io/instance: gitea-postgres-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: internal
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gitea-postgres
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gitea-postgres
    spec:
      containers:
        - name: postgres
          image: pgvector/pgvector:0.8.1-pg16-trixie@sha256:1e4956185a7fd9306a41ee759a7b4329c4faf9a2bb91a1d01437310c97002433
          imagePullPolicy: IfNotPresent
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gitea-postgres-data
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-postgres
  labels:
    app.kubernetes.io/name: gitea-postgres
    app.kubernetes.io/instance: gitea-postgres-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: internal
spec:
  selector:
    app.kubernetes.io/name: gitea-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
