apps/general/gitea-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  labels:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: gitea-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: internal
spec:
  selector:
    app.kubernetes.io/name: gitea
  ports:
    - name: http
      port: 3000
      targetPort: http
    - name: ssh
      port: 22
      targetPort: ssh
