apps/general/heimdall-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  labels:
    app.kubernetes.io/name: heimdall
    app.kubernetes.io/instance: heimdall-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: public
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: heimdall
  ports:
    - name: http
      port: 80
      targetPort: http
