apps/general/homebox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebox
  labels:
    app.kubernetes.io/name: homebox
    app.kubernetes.io/instance: homebox-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: internal
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: homebox
  ports:
    - name: http
      port: 7745
      targetPort: http
