apps/general/heimdall-redirects.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: heimdall-redirect-root
  namespace: general
  labels:
    app.kubernetes.io/name: heimdall-redirect-root
    app.kubernetes.io/instance: heimdall-redirect-root-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: internal
spec:
  redirectRegex:
    regex: ^https?://(www\.)?romanpeters\.nl/(.*)
    replacement: https://hello.romanpeters.nl/$2
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heimdall-root-alias
  namespace: general
  annotations:
    external-dns: external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-pub
    traefik.ingress.kubernetes.io/router.middlewares: general-heimdall-redirect-root@kubernetescrd
  labels:
    app.kubernetes.io/name: heimdall-root-alias
    app.kubernetes.io/instance: heimdall-root-alias-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: public
spec:
  ingressClassName: traefik
  rules:
    - host: romanpeters.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: heimdall
                port:
                  name: http
    - host: www.romanpeters.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: heimdall
                port:
                  name: http
