apps/general/n8n-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int
  labels:
    app.kubernetes.io/name: n8n
    app.kubernetes.io/instance: n8n-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: internal
spec:
  ingressClassName: traefik
  rules:
    - host: n8n.romanpeters.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  name: http
