apps/general/openwebui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openwebui
  namespace: general
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int
  labels:
    app.kubernetes.io/name: openwebui
    app.kubernetes.io/instance: openwebui-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: internal
spec:
  ingressClassName: traefik
  rules:
    - host: chat.romanpeters.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openwebui
                port:
                  name: http
